module redacted