@@ -95,14 +95,12 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                bg.tu_varna.sit.virtualvineyard/bg.tu_varna.sit.virtualvineyard.GUI.HelloApplication
+                                bg.tu_varna.sit.virtualvineyard.Main
                             </mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
+                            <options>
+                                <option>--add-opens</option>
+                                <option>java.base/java.lang=ALL-UNNAMED</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
